terraform/modules/master/network-security-group.tf
resource "azurerm_network_security_group" "master" {

    name                = "master-nsg"

    location            = var.resource_group.location

    resource_group_name = var.resource_group.name

    

    security_rule {

        name                       = "SSH"

        priority                   = 1001

        direction                  = "Inbound"

        access                     = "Allow"

        protocol                   = "Tcp"

        source_port_range          = "*"

        destination_port_range     = "22"

        source_address_prefix      = "*"

        destination_address_prefix = "*"

    }

    security_rule {

        name                       = "HTTP"

        priority                   = 1002

        direction                  = "Inbound"

        access                     = "Allow"

        protocol                   = "Tcp"

        source_port_range          = "*"

        destination_port_range     = "80"

        source_address_prefix      = "*"

        destination_address_prefix = "*"

    }
}
